// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullBleed component should match the snapshot with all options 1`] = `
<div
  className="full-bleed monkey full-bleed--light full-bleed--padding-large"
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\")",
    }
  }
>
  <p>
    content
  </p>
</div>
`;

exports[`FullBleed component should match the snapshot with no options 1`] = `
<div
  className="full-bleed full-bleed--padding-small"
>
  <p>
    content
  </p>
</div>
`;
